# substrate-node-template

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  spec-dev-raw.json  spec-dev.json
node/src/: service.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/kitties/src/storage/: mod.rs  v0.rs  v1.rs
pallets/ocw/: Cargo.toml
pallets/ocw-homework/: Cargo.toml
pallets/ocw-homework/src/: lib.rs  mock.rs
pallets/ocw-homework/src/crypto/: mod.rs
pallets/ocw-homework/src/offchain/: mod.rs
pallets/ocw-tutorials/: Cargo.toml
pallets/ocw-tutorials/src/: lib.rs
pallets/ocw-tutorials/src/off_chain/: mod.rs  storage.rs
pallets/ocw-tutorials/src/offchain/: storage.rs
pallets/ocw-tutorials/src/utils/: block_number.rs  mod.rs
pallets/ocw/src/: lib.rs  mock.rs
pallets/ocw/src/off_chain/: storage.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/template-2/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs  pallets.rs
